--- a/css/responsive.css
+++ b/css/responsive.css
@@ -85,4 +85,30 @@
         display:flex;
         margin-left: 3em;
     }
+    .navbar {
+        bottom: 0;
+        width: 100%;
+        height: 5rem;
+    }
+    .navbar-nav {
+        flex-direction: row;
+    }
+    .nav-link{
+        justify-content: center;
+    }
+} 
+
+@media (min-width: 1150px) {
+    .navbar{
+        top: 0;
+        width: 5rem;
+        height: 100vh;
+    }
+    .navbar:hover{
+        width: 20rem;
+    }
+    .navbar:hover .link-text {
+        display: inline;
+        transition: opacity var(--transition-speed);
+    }
 } 
